--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bahtinov Focus Status</title>
+    <title>Electron drag and drop bug</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <script src="./js/app.js" type="text/javascript"></script>
 </head>
